# Scrapling-Job-Boards-Scrapper

./: .env.example  .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml  render.yaml
.github/workflows/: scrape.yml
api/: __init__.py  devlens_jobs.py
core/: devlens_roles.py  settings.py
scraper/: normalization.py  spider.py
services/: redis.py  supabase.py
static/: app.js  index.html  styles.css
supabase/migrations/: 20260605_scraper_service_schema.sql
tests/: test_devlens_jobs.py  test_job_normalization.py  test_scout.py  test_scraper_redis.py
